<resources>
  <string name="app_name">NaonedBus</string>
  <string name="version_number">Version %s</string>
  <string name="version_name">Blue Hawaiian</string>
  <string name="today">Today</string>
  <string name="yesterday">Yesterday</string>
  <string name="tomorrow">Tomorrow</string>
  <string name="loading">Loading…</string>
  <string name="emptyString"></string>
  <string name="updating">Updating...</string>
  <string name="updating_complete">Update completed</string>
  <string name="setup">Installation in progress</string>
  <string name="setup_complete">Installation completed</string>
  <string name="copy">Copy</string>
  <string name="skip">Skip</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="format_metres">%d meters</string>
  <string name="format_km">%1$.0f km</string>
  <string name="format_minutes">%d min</string>
  <string name="format_heures">%1$sh%2$s</string>
  <string name="pref_section_navigation">Browsing</string>
  <string name="pref_section_plans">Plans of the lines</string>
  <string name="pref_section_timetable">Schedules</string>
  <string name="pref_section_calendar">Calendar</string>
  <string name="pref_navigation_home">Default menu at start-up</string>
  <string name="pref_cache_enable">Enable cache</string>
  <string name="pref_cache_clear">Clear Cache</string>
  <string name="pref_cache_size">Cache size: %s</string>
  <string name="pref_calendar_title">Default calendar</string>
  <string name="pref_calendar_summary">Select a default calendar</string>
  <string name="type_relai_tram">Tram Bus Relay</string>
  <string name="type_tramway">Tram</string>
  <string name="type_chronobus">Chronobus</string>
  <string name="type_bus">Bus</string>
  <string name="type_express">Express lines</string>
  <string name="type_nuit">Night lines</string>
  <string name="type_special">Special lines</string>
  <string name="tuto_about_title">Welcome</string>
  <string name="tuto_about_summary"><![CDATA[Naonedbus is a free, open-source application, without any link with the Semitan.<br />This application is developped volontarily. <br /><br />Data comes from Open Data and times are those provided by the TAN. <br /><br /> <b>If you encounter any problem, please send us an email and we\'ll get back to you ;)</b>]]></string>
  <string name="tuto_menu_title">Main menu</string>
  <string name="tuto_menu_summary">Access sections through the menu: whether by the main icon or by sliding from the left side of the screen</string>
  <string name="tuto_lignes_title">Lines</string>
  <string name="tuto_lignes_summary">Navigate through the lines in a glance</string>
  <string name="tuto_favoris_title">Favorites</string>
  <string name="tuto_favoris_summary"><![CDATA[Add to <b>favourites</b> stops for anytime access]]></string>
  <string name="tuto_trafic_title">Traffic information</string>
  <string name="tuto_trafic_summary">Road work? Programmed event? Keep an eye on traffic information !</string>
  <string name="tuto_commentaires_title">Participatory traffic info</string>
  <string name="tuto_commentaires_summary"><![CDATA[Accidents, delays : <b>Let people know</b> and be informed in <b>real time</b> thanks to shared traffic information]]></string>
  <string name="tuto_parkings_title">Car parks</string>
  <string name="tuto_parkings_summary">Consult the Nantes\' car parks list and their availability in real time</string>
  <string name="tuto_mobilite_title">Mobility</string>
  <string name="tuto_mobilite_summary">Where is the nearest bicloo? Also works with Marguerite stations, carpooling and Lila</string>
  <string name="tuto_widgets_title">Widgets</string>
  <string name="tuto_widgets_summary">Place your favorite stops as widgets!</string>
  <string name="tuto_beta_title">Beta version</string>
  <string name="tuto_beta_summary"><![CDATA[You are using a Beta version of Naonedbus.<br />Please report us any issue at : <br />naonedbus@gmail.com</font>]]></string>
  <string name="title_activity_main">Home</string>
  <string name="title_activity_infos_trafic">Traffic information</string>
  <string name="title_activity_carte">Map</string>
  <string name="title_activity_itineraire">Itineraries</string>
  <string name="title_activity_bicloo">Bicloos</string>
  <string name="title_activity_equipements">Mobility</string>
  <string name="title_activity_parkings">Car parks</string>
  <string name="title_activity_recherche">Search</string>
  <string name="title_activity_actu">News</string>
  <string name="title_activity_parametres">Settings</string>
  <string name="title_activity_horaires">Timetables</string>
  <string name="title_activity_about">About</string>
  <string name="title_activity_groupes">Group management</string>
  <string name="title_activity_donate">Donate</string>
  <string name="menu_section_naonedbus">Naonedbus</string>
  <string name="menu_section_options">Settings</string>
  <string name="action_call">Phone call</string>
  <string name="action_navigate">Itinerary</string>
  <string name="action_share">Share</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_comment">Comment on traffic</string>
  <string name="action_import">Import</string>
  <string name="action_export">Export</string>
  <string name="action_sort">Sort</string>
  <string name="action_delete">Delete</string>
  <string name="action_rename">Rename</string>
  <string name="action_groups">Groups</string>
  <string name="action_sort_name">Sort by name</string>
  <string name="action_sort_distance">Sort by distance</string>
  <string name="action_sort_ordre">Sort by position</string>
  <string name="action_sort_parking_places">Sort by availability</string>
  <string name="action_filter_arrets_none">All stops</string>
  <string name="action_filter_arrets_favoris">Bookmarked stops</string>
  <string name="action_filter_lignes_none">All lines</string>
  <string name="action_filter_lignes_favoris">Lines with bookmarks</string>
  <string name="action_filter">Filter</string>
  <string name="action_send">Send</string>
  <string name="action_rate">Note this application</string>
  <string name="action_show_plan">Line map</string>
  <string name="action_change_date">Change date</string>
  <string name="action_change_date_now">Today</string>
  <string name="action_change_sens">Other way</string>
  <string name="action_show_on_map">See on the map</string>
  <string name="action_favori">Bookmark</string>
  <string name="action_favori_add">Bookmark it</string>
  <string name="action_favori_remove">Remove from bookmarks</string>
  <string name="action_search">Search</string>
  <string name="action_location_center">Center on my location</string>
  <string name="action_list_location_center">Center to the closest</string>
  <string name="action_groupes_add">Add group</string>
  <string name="action_groupes_manage">Manage groups</string>
  <string name="action_view_satellite">Satellite view</string>
  <string name="error_title">An error occured</string>
  <string name="error_title_upgrade">Update procedure failed</string>
  <string name="error_title_webservice_tan">The Tan service is unavailable</string>
  <string name="error_title_webservice">Service is unavailable</string>
  <string name="error_title_network">A network error has occurred</string>
  <string name="error_title_empty">No data is available</string>
  <string name="error_title_empty_favori">No bookmark</string>
  <string name="error_title_empty_groupe">No group</string>
  <string name="error_title_selected_groupe">No selected group</string>
  <string name="error_summary">Please try again!</string>
  <string name="error_summary_upgrade">We are sorry to announce your favorites were lost during this update, we apologize for any inconvenience it may cause!</string>
  <string name="error_summary_network">Check your connection and try again</string>
  <string name="error_summary_webservice">Please try again in a few moments</string>
  <string name="error_summary_empty">“Sorry about this. I know it\'s a bit silly.”</string>
  <string name="error_summary_empty_favori">Slide to the left screen to navigate between lines.\n\n←</string>
  <string name="error_summary_empty_favori_bicloo">Slide to the left screen to select a station.\n\n←</string>
  <string name="error_summary_empty_groupe">Add your groups by clicking on the icon \"+\"</string>
  <string name="error_summary_selected_groupe">You have not selected any group to display.</string>
  <string name="error_summary_empty_arrets_favoris">You selected the \"Bookmarked stops\" but no bookmark has been defined for this direction.</string>
  <string name="error_current_address">Current address unknown</string>
  <string name="title_fragment_lignes">Lines</string>
  <string name="title_fragment_favoris">Bookmarks</string>
  <string name="title_fragment_proximite">Nearby</string>
  <string name="title_fragment_about">About</string>
  <string name="title_fragment_versions">What\'s New</string>
  <string name="about_autors_title">Authors</string>
  <string name="about_autors_content_romain">Romain Guefveneu</string>
  <string name="about_autors_content_romain_twitter">\@romainguefveneu ↗</string>
  <string name="about_autors_content_benoit">Benoît Cotinat</string>
  <string name="about_autors_content_benoit_twitter">\@benoitcotinat ↗</string>
  <string name="about_com_title">Let\'s communicate</string>
  <string name="about_com_twitter">Twitter</string>
  <string name="about_com_facebook">Facebook</string>
  <string name="about_com_mail">Email</string>
  <string name="about_info_title">Information</string>
  <string name="about_info_content">This application is developed voluntarily, on our free time, without any affiliation with the SEMITAN.\n\nData is available on tan.fr and data.nantes.fr websites</string>
  <string name="about_thanks_title">Credits</string>
  <string name="about_translators_title">Translators</string>
  <string name="about_licences_title">Licenses</string>
  <string name="about_licences_libs">Libraries</string>
  <string name="about_licences_icons">Icons</string>
  <string name="donate_title">Donate</string>
  <string name="donate_via">Make a donation via</string>
  <string name="donate_summary">Making a donation is a way to thank us for the time we spent developing this application ;-)</string>
  <string name="donate_donators_title">Donors</string>
  <string name="title_fragment_plan">Map</string>
  <string name="title_fragment_parcours">Route</string>
  <string name="title_activity_plan">Line %1$s • %2$s</string>
  <string name="title_fragment_tan_actu">Tan news</string>
  <string name="title_fragment_en_direct">Live</string>
  <string name="title_fragment_trafic_detail">Detail</string>
  <string name="title_fragment_parkings_publics">Public</string>
  <string name="title_fragment_parkings_relais">Relay</string>
  <string name="title_fragment_bicloos">Stations</string>
  <string name="title_fragment_marguerites">Marguerites</string>
  <string name="title_fragment_lila">Lila</string>
  <string name="parking_titre_places_disponibles">Spaces available</string>
  <string name="parking_titre_places_totales">Total spaces</string>
  <string name="parking_titre_mise_a_jour">Update</string>
  <string name="parking_titre_telephone">Phone</string>
  <string name="msg_element_not_localized">This item cannot be located.</string>
  <string name="hint_ajouter_commentaire">What\'s happening on the TAN network ?</string>
  <string name="target_ligne">Line</string>
  <string name="target_sens">Way</string>
  <string name="target_arret">Stop</string>
  <string name="target_toutes_lignes_symbole">\u221E</string>
  <string name="target_tous_sens">All ways</string>
  <string name="target_tous_arrets">All stops</string>
  <string name="itinerary_kind">Itinerary type</string>
  <string name="itinerary_date">Date</string>
  <string name="itinerary_time">Time</string>
</resources>