<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen"
    android:title="@string/app_name" >

    <!-- <PreferenceCategory android:title="Thème" > -->
    <!-- <ListPreference -->
    <!-- android:entries="@array/themeOptions" -->
    <!-- android:entryValues="@array/themeValues" -->
    <!-- android:key="theme" -->
    <!-- android:persistent="true" -->
    <!-- android:title="Thème de l&apos;application" /> -->
    <!-- </PreferenceCategory> -->
    <!-- <PreferenceCategory android:title="Favoris" > -->
    <!-- <Preference -->
    <!-- android:key="favoris.import" -->
    <!-- android:title="Importer mes anciens favoris avec ma clé" /> -->
    <!-- </PreferenceCategory> -->

    <PreferenceCategory android:title="@string/pref_section_plans" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="plan.cache.enabled"
            android:title="@string/pref_cache_enable" />

        <Preference
            android:key="plan.cache.clear"
            android:summary="@string/pref_cache_size"
            android:title="@string/pref_cache_clear" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_timetable" >
        <Preference
            android:key="horaires.cache.clear"
            android:title="@string/pref_cache_clear" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_section_calendar" >
        <ListPreference
            android:key="calendrier.defaut"
            android:summary="@string/pref_calendar_summary"
            android:title="@string/pref_calendar_title" />
    </PreferenceCategory>

</PreferenceScreen>