<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="always"
        android:title="@string/action_sort">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@id/menu_sort_name"
                    android:title="@string/action_sort_name"/>
                <item
                    android:id="@id/menu_sort_distance"
                    android:title="@string/action_sort_distance"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@id/menu_import_export"
        android:icon="@drawable/ic_action_import_export"
        android:showAsAction="always"
        android:title="@string/action_import">
        <menu>
            <item
                android:id="@id/menu_import"
                android:title="@string/action_import"/>
            <item
                android:id="@id/menu_export"
                android:title="@string/action_export"/>
        </menu>
    </item>
    <item
        android:id="@id/menu_group"
        android:icon="@drawable/ic_action_labels"
        android:showAsAction="always"
        android:title="@string/action_groups"/>

</menu>