<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/menu_favori"
        android:icon="@drawable/ic_action_important"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_favori"/>
    <item
        android:id="@id/menu_show_plan"
        android:icon="@drawable/ic_action_plan"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_show_plan"/>
    <item
        android:id="@id/menu_place"
        android:icon="@drawable/ic_action_place"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/action_show_on_map"/>
    <item
        android:id="@id/menu_date"
        android:icon="@drawable/ic_action_change_date"
        android:orderInCategory="400"
        android:showAsAction="ifRoom"
        android:title="@string/action_change_date"/>
    <item
        android:id="@id/menu_date_maintenant"
        android:icon="@drawable/ic_action_go_to_today"
        android:orderInCategory="500"
        android:showAsAction="ifRoom"
        android:title="@string/action_change_date_now"/>
    <item
        android:id="@id/menu_sens"
        android:icon="@drawable/ic_action_repeat"
        android:orderInCategory="600"
        android:showAsAction="ifRoom"
        android:title="@string/action_change_sens"/>
    <item
        android:id="@id/menu_feedback_bug"
        android:orderInCategory="10000"
        android:showAsAction="never"
        android:title="@string/action_feedback_bug"
        android:visible="false"/>

</menu>