<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/SectionTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_com_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3" >

        <TextView
            android:id="@id/aboutTwitter"
            style="@style/SectionContentItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/twitter_account"
            android:gravity="center_horizontal"
            android:text="@string/about_com_twitter" />

        <TextView
            android:id="@id/aboutFacebook"
            style="@style/SectionContentItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/facebook_account"
            android:gravity="center_horizontal"
            android:text="@string/about_com_facebook" />

        <TextView
            android:id="@id/aboutMail"
            style="@style/SectionContentItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/gmail"
            android:gravity="center_horizontal"
            android:text="@string/about_com_mail" />
    </LinearLayout>

</LinearLayout>